dmx theme: fix bootstrap anchor jump position error

--- a/themes/dmx/resources/css/dmx.css
+++ b/themes/dmx/resources/css/dmx.css
@@ -1,21 +1,4 @@
-html, body {
-	height: 100%;
-
+h2,h2,h3,h4,h5,h6 {
+	padding-top:50px;
+	margin-top:-50px;
 }
-
-#wrap {
-	min-height: 100%;
-}
-
-#main {
-	overflow:auto;
-	padding-bottom:150px; /* this needs to be bigger than footer height*/
-}
-
-.footer {
-	position: relative;
-	margin-top: -150px; /* negative value of footer height */
-	height: 150px;
-	clear:both;
-	padding-top:20px;
-} 
